dump/src/reader/snapshots/dump__reader__test__import_dump_v1-6.snap
---
source: dump/src/reader/mod.rs
expression: products.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [],
  "rankingRules": [
    "typo",
    "words",
    "proximity",
    "attribute",
    "exactness"
  ],
  "stopWords": [],
  "synonyms": {
    "android": [
      "phone",
      "smartphone"
    ],
    "iphone": [
      "phone",
      "smartphone"
    ],
    "phone": [
      "android",
      "iphone",
      "smartphone"
    ]
  },
  "distinctAttribute": null
}
