dump/src/reader/snapshots/dump__reader__test__import_dump_v2-2.snap
---
source: dump/src/reader/mod.rs
expression: tasks
---
[
  {
    "uid": 0,
    "indexUid": "movies_2",
    "status": "enqueued",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "enqueuedAt": "2022-10-09T20:27:59.828915609Z"
  },
  {
    "uid": 1,
    "indexUid": "products",
    "status": "succeeded",
    "type": {
      "settings": {
        "allow_index_creation": true
      }
    },
    "details": {
      "synonyms": {
        "android": [
          "phone",
          "smartphone"
        ],
        "iphone": [
          "phone",
          "smartphone"
        ],
        "phone": [
          "smartphone",
          "iphone",
          "android"
        ]
      }
    },
    "duration": "PT0.078898523S",
    "enqueuedAt": "2022-10-09T20:27:22.597296237Z",
    "startedAt": "2022-10-09T20:27:22.610066114Z",
    "finishedAt": "2022-10-09T20:27:22.688964637Z"
  },
  {
    "uid": 2,
    "indexUid": "products",
    "status": "failed",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "error": {
      "message": "missing primary key",
      "code": "unretrievable_error_code",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
    },
    "duration": "PT0.000481227S",
    "enqueuedAt": "2022-10-09T20:27:23.305963122Z",
    "startedAt": "2022-10-09T20:27:23.312497053Z",
    "finishedAt": "2022-10-09T20:27:23.31297828Z"
  },
  {
    "uid": 3,
    "indexUid": "products",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.029524054S",
    "enqueuedAt": "2022-10-09T20:27:23.91528854Z",
    "startedAt": "2022-10-09T20:27:23.921493715Z",
    "finishedAt": "2022-10-09T20:27:23.951017769Z"
  },
  {
    "uid": 4,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.112037333S",
    "enqueuedAt": "2022-10-09T20:27:22.075264451Z",
    "startedAt": "2022-10-09T20:27:22.085751162Z",
    "finishedAt": "2022-10-09T20:27:22.197788495Z"
  },
  {
    "uid": 5,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "settings": {
        "allow_index_creation": true
      }
    },
    "details": {
      "rankingRules": [
        "words",
        "typo",
        "proximity",
        "attribute",
        "exactness",
        "asc(release_date)"
      ]
    },
    "duration": "PT0.018737538S",
    "enqueuedAt": "2022-10-09T20:27:22.380218549Z",
    "startedAt": "2022-10-09T20:27:22.393023806Z",
    "finishedAt": "2022-10-09T20:27:22.411761344Z"
  },
  {
    "uid": 6,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 100
    },
    "duration": "PT2.102072319S",
    "enqueuedAt": "2022-10-09T20:27:59.817923645Z",
    "startedAt": "2022-10-09T20:27:59.829038211Z",
    "finishedAt": "2022-10-09T20:28:01.93111053Z"
  },
  {
    "uid": 7,
    "indexUid": "dnd_spells",
    "status": "failed",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "error": {
      "message": "missing primary key",
      "code": "unretrievable_error_code",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
    },
    "duration": "PT0.079843588S",
    "enqueuedAt": "2022-10-09T20:27:24.157663206Z",
    "startedAt": "2022-10-09T20:27:24.162839906Z",
    "finishedAt": "2022-10-09T20:27:24.242683494Z"
  },
  {
    "uid": 8,
    "indexUid": "dnd_spells",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.026824533S",
    "enqueuedAt": "2022-10-09T20:27:24.283289037Z",
    "startedAt": "2022-10-09T20:27:24.285985108Z",
    "finishedAt": "2022-10-09T20:27:24.312809641Z"
  }
]
