dump/src/reader/snapshots/dump__reader__test__import_dump_v3-14.snap
---
source: dump/src/reader/mod.rs
expression: spells.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {},
        ),
        sortable_attributes: Set(
            {},
        ),
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "sort",
                "exactness",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {},
        ),
        distinct_attribute: Reset,
        typo_tolerance: NotSet,
        faceting: NotSet,
        pagination: NotSet,
        _kind: PhantomData<index::updates::Checked>,
    },
)
