dump/src/reader/snapshots/dump__reader__test__import_dump_v3-2.snap
---
source: dump/src/reader/mod.rs
expression: tasks
---
[
  {
    "uid": 0,
    "indexUid": "movies_2",
    "status": "enqueued",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "enqueuedAt": "2022-10-07T11:39:03.703667164Z"
  },
  {
    "uid": 1,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.015568342S",
    "enqueuedAt": "2022-10-07T11:38:54.004402239Z",
    "startedAt": "2022-10-07T11:38:54.011081233Z",
    "finishedAt": "2022-10-07T11:38:54.026649575Z"
  },
  {
    "uid": 2,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "settings": {
        "allow_index_creation": true
      }
    },
    "details": {
      "filterableAttributes": [
        "genres",
        "id"
      ],
      "sortableAttributes": [
        "release_date"
      ]
    },
    "duration": "PT0.013008604S",
    "enqueuedAt": "2022-10-07T11:38:54.217852146Z",
    "startedAt": "2022-10-07T11:38:54.23264073Z",
    "finishedAt": "2022-10-07T11:38:54.245649334Z"
  },
  {
    "uid": 3,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "settings": {
        "allow_index_creation": true
      }
    },
    "details": {
      "rankingRules": [
        "words",
        "typo",
        "proximity",
        "attribute",
        "sort",
        "exactness",
        "release_date:asc"
      ]
    },
    "duration": "PT0.002749330S",
    "enqueuedAt": "2022-10-07T11:38:54.438833927Z",
    "startedAt": "2022-10-07T11:38:54.453596791Z",
    "finishedAt": "2022-10-07T11:38:54.456346121Z"
  },
  {
    "uid": 4,
    "indexUid": "movies",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 100
    },
    "duration": "PT0.490713265S",
    "enqueuedAt": "2022-10-07T11:39:03.695252071Z",
    "startedAt": "2022-10-07T11:39:03.698139272Z",
    "finishedAt": "2022-10-07T11:39:04.188852537Z"
  },
  {
    "uid": 5,
    "indexUid": "products",
    "status": "succeeded",
    "type": {
      "settings": {
        "allow_index_creation": true
      }
    },
    "details": {
      "synonyms": {
        "android": [
          "phone",
          "smartphone"
        ],
        "iphone": [
          "phone",
          "smartphone"
        ],
        "phone": [
          "smartphone",
          "iphone",
          "android"
        ]
      }
    },
    "duration": "PT0.006624974S",
    "enqueuedAt": "2022-10-07T11:38:54.734594617Z",
    "startedAt": "2022-10-07T11:38:54.737274016Z",
    "finishedAt": "2022-10-07T11:38:54.74389899Z"
  },
  {
    "uid": 6,
    "indexUid": "products",
    "status": "failed",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "error": {
      "message": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
      "code": "unretrievable_error_code",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
    },
    "duration": "PT0.000092701S",
    "enqueuedAt": "2022-10-07T11:38:55.350510177Z",
    "startedAt": "2022-10-07T11:38:55.353402439Z",
    "finishedAt": "2022-10-07T11:38:55.35349514Z"
  },
  {
    "uid": 7,
    "indexUid": "products",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.011700399S",
    "enqueuedAt": "2022-10-07T11:38:55.940610428Z",
    "startedAt": "2022-10-07T11:38:55.951485379Z",
    "finishedAt": "2022-10-07T11:38:55.963185778Z"
  },
  {
    "uid": 8,
    "indexUid": "dnd_spells",
    "status": "failed",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 0
    },
    "error": {
      "message": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
      "code": "unretrievable_error_code",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
    },
    "duration": "PT0.000113251S",
    "enqueuedAt": "2022-10-07T11:38:56.263041061Z",
    "startedAt": "2022-10-07T11:38:56.265837882Z",
    "finishedAt": "2022-10-07T11:38:56.265951133Z"
  },
  {
    "uid": 9,
    "indexUid": "dnd_spells",
    "status": "succeeded",
    "type": {
      "documentImport": {
        "method": "ReplaceDocuments",
        "allow_index_creation": true
      }
    },
    "details": {
      "receivedDocuments": 0,
      "indexedDocuments": 10
    },
    "duration": "PT0.016326830S",
    "enqueuedAt": "2022-10-07T11:38:56.501949087Z",
    "startedAt": "2022-10-07T11:38:56.504677498Z",
    "finishedAt": "2022-10-07T11:38:56.521004328Z"
  }
]
